--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "package-linux": "npm run build && rm -rf release && build --linux --projectDir ./dist",
     "package-mac": "npm run build && rm -rf release && build --mac --projectDir ./dist",
     "package-all": "npm run build && rm -rf release && build --mac --win --linux --projectDir ./dist",
-    "hot-server": "cross-env node -r babel-register scripts/dev.js",
-    "start-hot": "cross-env HOT=1 ./node_modules/.bin/electron -r babel-register -r babel-polyfill ./main",
+    "hot-server": "cross-env NODE_ENV=development node -r babel-register scripts/dev.js",
+    "start-hot": "cross-env HOT=1 NODE_ENV=development ./node_modules/.bin/electron -r babel-register -r babel-polyfill ./main",
     "dev": "concurrently --kill-others \"npm run hot-server\" \"npm run start-hot\""
   },
   "author": "var.darling@gmail.com",
