--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "babel-register": "^6.24.1",
     "concurrently": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "4.0.0",
+    "cross-env": "^4.0.0",
     "css-loader": "^0.28.4",
     "electron": "^1.6.11",
     "electron-builder": "^19.24.1",
